--- a/map-frontend/src/index.css
+++ b/map-frontend/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: transparent;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,11 +28,13 @@ body {
   min-width: 320px;
   min-height: 100vh;
   overflow: hidden;
+  background: transparent;
 }
 
 #root {
   width: 100vw;
   height: 100vh;
+  background: transparent;
 }
 
 h1 {
@@ -62,7 +64,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: transparent;
   }
   a:hover {
     color: #747bff;
